# DUCKDB_materials

./: .gitignore  README.md  annual_maxima_csv.ipynb  build_rain_duckdb.py  pyproject.toml  rainfall_analysis.ipynb
data/: Meta_data.txt
